<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"
        android:background="@android:color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:navigationIcon="@drawable/menu"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="666dp"
                android:background="@color/colorGreen"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="#efefef"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/ContactText"
                    tools:layout_editor_absoluteX="0dp">

                <TextView
                    android:id="@+id/ContactUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/Contact"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ContactText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/reply"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ContactUs" />

                <TextView
                    android:id="@+id/firstnameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"

                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="2dp"
                    android:text="@string/first_name"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="98dp" />

                <EditText
                    android:id="@+id/FirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:hint="@string/hint_firstname"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/lastnameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="2dp"
                    android:text="@string/last_name"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="98dp" />

                <EditText
                    android:id="@+id/LastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:hint="@string/hint_lastname"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/subjectTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="2dp"
                    android:text="@string/subject"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="98dp" />

                <EditText
                    android:id="@+id/MessageText"
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:gravity="top"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:hint="@string/write_message"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_green"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    tools:layout_editor_absoluteX="77dp"
                    tools:layout_editor_absoluteY="446dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.DrawerLayout>